--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@ title: Posts
 ---
 
 {% for post in site.posts %}
-  <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-  <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong></small></p>
+  <h3><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong></small> - <a href="{{ post.url }}">{{ post.title }}</a></h3>
 {% endfor %}
