--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Posts
 ---
 
 {% for post in site.posts %}
-<h3><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> - <a href="{{ post.url }}">{{ post.title }}</a></small></h3>
+<h3><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> - <a href="{{ post.url }}"><em>{{ post.title }}</em></a></small></h3>
 {% endfor %}
