Removed legacy blog.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
----
-layout: page
-title: Posts
----
-
-{% for post in site.posts %}
-<h3><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> - <a href="{{ post.url }}"><em>{{ post.title }}</em></a></small></h3>
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+  <h1>PJ Hampton</h1>
+  <h3>Coming Oct '17</h3>
+</body>
+</html>
