remove data for now.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title></title>
 </head>
 <body>
-  <h1>PJ Hampton</h1>
-  <h3>Coming Oct '17</h3>
+  <h1 style="text-align: center">PJ Hampton</h1>
 </body>
 </html>
