Add logo and basic styles.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>PJ Hampton :: Technology & Data</title>
+
+  <link rel="stylesheet" href="static/css/app.css" />
 </head>
 <body>
-  <h1 style="text-align: center">PJ Hampton</h1>
+  <div id="app">
+    <img src="static/images/logo.png" id="logo" alt="pjhampton" />
+  </div>
 </body>
 </html>
