--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PJ Hampton :: Technology & Data</title>
-
+  <title>PJ Hampton :: Software Advisory</title>
   <link rel="stylesheet" href="static/css/app.css" />
 </head>
 <body>
