--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PJ Hampton :: Software Advisory</title>
+  <title>PJ Hampton :: Software R&D</title>
   <link rel="stylesheet" href="static/css/app.css" />
 </head>
 <body>
