start new design.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,99 @@
 <head>
   <meta charset="UTF-8">
   <title>PJ Hampton :: Software R&D</title>
+  <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
+  <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
   <link rel="stylesheet" href="static/css/app.css" />
 </head>
 <body>
-  <div id="app">
-    <img src="static/images/logo.png" id="logo" alt="pjhampton" />
-  </div>
+  <header class="px3 py3 xs-px3">
+    <div class="clearfix">
+        <div class="sm-col sm-col-6">
+            <img src="static/images/logo.png" id="logo" alt="pjhampton" />
+        </div>
+        <div class="sm-col sm-col-6">
+            <nav class="right-align">
+                <ul class="list-reset">
+                    <li class="inline-block pr3">
+                        <a href="">Consulting</a>
+                    </li>
+                    <li class="inline-block pr3">
+                        <a href="">Products</a>
+                    </li>
+                    <li class="inline-block pr3">
+                        <a href="">Request</a>
+                    </li>
+                    <li class="inline-block mr1">
+                        <a href="">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="inline-block mr1">
+                        <a href="">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+  </header>
+  <main>
+    <header class="px4 py4 xs-px1">
+      <h1>AI software without magic, tears or fears.</h1>
+      <p>Don’t settle for one-size-fits-none solutions.</p>
+      <p>Pick up the tools and build something great.</p>
+    </header>
+
+    <section class="bg-theme px4 py4 xs-px1 angle angle-top-right angle-bottom-left">
+      <h3 class="h2">Our Clients</h3>
+      <p>some content here</p>
+      <p>some content here</p>
+      <p>some content here</p>
+      <p>some content here</p>
+    </section>
+
+    <section class="bg px4 py4 xs-px1 width">
+      <h3 class="h1">We value...</h3>
+
+      <div class="clearfix">
+        <div class="sm-col sm-col-6">
+          <ol class="list mb4 list-numbers small">
+            <li class="item mb2">Open over closed source</li>
+            <li class="item mb2">Signals over assumptions</li>
+            <li class="item mb2">Trust over profit</li>
+          </ol>
+        </div>
+        <div class="sm-col sm-col-6">
+          <ol class="list mb4 list-numbers small">
+            <li class="item mb2">Collaboration over hierarchies</li>
+            <li class="item mb2">People over processes</li>
+            <li class="item mb2">Robustness over hype</li>
+          </ol>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-theme px4 py4 xs-px1 angle angle-top-right angle-bottom-left">
+      <h3 class="h2">Working with us</h3>
+    </section>
+
+    <section class="px4 py4 xs-px1 angle angle-top-right angle-bottom-left">
+      <h3 class="h2">We value...</h3>
+
+
+      <ol>
+        <li>Open over closed source</li>
+        <li>Signals over assumptions</li>
+        <li>Trust over profit</li>
+        <li>Collaboration over hierarchies</li>
+        <li>People over processes</li>
+        <li>Robustness over hype</li>
+      </ol>
+    </section>
+  </main>
+  <footer class="bg-footer px4 py4 xs-px1 angle angle-top-right angle-bottom-left">
+      <h4>Footer</h4>
+  </footer>
 </body>
 </html>
