[PH] update logo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="app">
-    <img src="static/images/logo.png" id="logo" alt="pjhampton" />
+    <img src="static/images/logo.svg" id="logo" alt="pjhampton" />
   </div>
 </body>
 </html>
